--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "vue",
     "website",
     "template",
-    "scss",
+    "unocss",
     "typescript",
     "open-source"
   ],
@@ -38,6 +38,7 @@
     "@heroicons/vue": "^2.2.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@nuxtjs/seo": "^3.3.0",
+    "@vueuse/motion": "^3.0.3",
     "@vueuse/nuxt": "^13.4.0",
     "lucide-vue-next": "^0.523.0",
     "nuxt": "^4.2.2",
@@ -52,11 +53,13 @@
     "@nuxt/eslint": "^1.12.1",
     "@pinia/nuxt": "^0.11.3",
     "@types/node": "^24.0.4",
+    "@unocss/nuxt": "^66.5.12",
+    "@unocss/reset": "^66.5.12",
     "eslint": "^9.39.2",
     "eslint-plugin-format": "^1.1.0",
     "pinia": "^3.0.4",
-    "sass": "^1.89.2",
     "typescript": "^5.9.3",
+    "unocss": "^66.5.12",
     "vue-tsc": "^3.1.8"
   },
   "pnpm": {
