feat: 更新 ESLint 配置，添加 UnoCSS 支持并更新相关依赖

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nuxt/eslint": "^1.12.1",
     "@pinia/nuxt": "^0.11.3",
     "@types/node": "^24.0.4",
+    "@unocss/eslint-plugin": "^66.5.12",
     "@unocss/nuxt": "^66.5.12",
     "@unocss/reset": "^66.5.12",
     "eslint": "^9.39.2",
